[package]
name = "brewpod"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
bollard = "0.19.2"
dotenvy = "0.15.7"
reqwest = { version = "0.12.23", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
